--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div id="introduction" data-traverse-target="introduction">
             <div class="doc-row">
               <div class="doc-copy">
-                <p>An API that allows to retrieve the oil prices of the dominican Republic, each Friday the prices of the following week are available for queriying</p>
+                <p>An API that allows to retrieve the oil prices of the Dominican Republic, each Friday the prices of the following week are available for querying.</p>
               </div>
               <div class="doc-examples">
                 <section>
